tests/snapshots/binds__bind_set_query_basic@002.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --bind ctrl-a:set-query(foo)\nafter:\n  @ctrl 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/3                                                                        0/0"
"> foo                                                                           "
cursor: (24, 6)
