tests/snapshots/binds__bind_set_query_fields.snap
---
source: tests/binds.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c.3                                                                           "
"  b.2                                                                           "
"> a.1                                                                           "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
