tests/snapshots/binds__bind_set_query_fields@001.snap
---
source: tests/binds.rs
description: "input: items [\"a.1\", \"b.2\", \"c.3\"]\noptions: --bind ctrl-a:set-query({1}) -d \\."
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c.3                                                                           "
"  b.2                                                                           "
"> a.1                                                                           "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
