tests/snapshots/binds__bind_set_query_fields@002.snap
---
source: tests/binds.rs
description: "input: items [\"a.1\", \"b.2\", \"c.3\"]\noptions: --bind ctrl-a:set-query({1}) -d \\.\nafter:\n  @ctrl 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a.1                                                                           "
"  1/3                                                                        0/0"
"> a                                                                             "
cursor: (24, 4)
